--- a/libs/zenn-ai-agent/pyproject.toml
+++ b/libs/zenn-ai-agent/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = "==3.11.*"
 dependencies = [
+    "google-cloud-texttospeech>=2.23.0",
     "google-genai>=0.3.0",
     "pyaudio>=0.2.14",
     "pydantic-settings>=2.7.0",
