--- a/libs/zenn-ai-agent/pyproject.toml
+++ b/libs/zenn-ai-agent/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "google-cloud-texttospeech>=2.23.0",
     "google-genai>=0.3.0",
     "numpy==1.26.4",
-    "opencv-python>=4.10.0.84",
+    "opencv-python-headless>=4.10.0.84",
     "pillow>=11.0.0",
     "pyaudio>=0.2.14",
     "pydantic-settings>=2.7.0",
