--- a/libs/zenn-ai-agent/pyproject.toml
+++ b/libs/zenn-ai-agent/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = "==3.11.*"
 dependencies = [
     "google-cloud-speech>=2.29.0",
     "google-cloud-texttospeech>=2.23.0",
-    "google-genai>=0.3.0",
+    "google-genai==0.5.0",
     "numpy==1.26.4",
     "opencv-python-headless>=4.10.0.84",
     "pillow>=11.0.0",
