--- a/libs/zenn-ai-agent/pyproject.toml
+++ b/libs/zenn-ai-agent/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = "==3.11.*"
 dependencies = [
+    "google-auth>=2.37.0",
     "google-cloud-speech==2.30.0",
     "google-cloud-texttospeech==2.23.0",
     "google-genai==0.5.0",
