--- a/libs/zenn-ai-agent/pyproject.toml
+++ b/libs/zenn-ai-agent/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = "==3.11.*"
 dependencies = [
     "google-auth>=2.37.0",
     "google-cloud-speech==2.30.0",
+    "google-cloud-storage>=2.19.0",
     "google-cloud-texttospeech==2.23.0",
     "google-genai==0.5.0",
     "numpy==1.26.4",
