--- a/libs/wondy-web/package.json
+++ b/libs/wondy-web/package.json
@@ -14,8 +14,13 @@
   },
   "dependencies": {
     "@prisma/client": "6.2.1",
+    "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slot": "1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.7",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
+    "dayjs": "^1.11.13",
     "lucide-react": "0.469.0",
     "next": "15.1.6",
     "react": "19.0.0",
